--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -9,6 +9,7 @@
     <div class="container">
       <h1>Fill out the form to create FFE Selenium Test Cronjobs</h1>
       <form id="cronForum">
+        <fieldset>
         <div class="form-group">
           <label for="releaseBranch">Release Branch:</label>
           <input type="text" class="form-control" id="releaseBranch">
@@ -35,17 +36,22 @@
         </div>
         <div class="form-group">
             <label for="seleniumTestEmailList">Selenium Test EmailList:</label>
-            <input type="text" class="form-control" id="seleniumTestEmailList">
+            <input type="text" class="form-control" id="seleniumTestEmailList" placeholder="Seperate by a ,">
         </div>
         <div class="form-group">
           <label for="cronJobSchedule">Cron Job Schedule:</label>
-          <input type="text" class="form-control" id="cronJobSchedule">
-      </div>
+          <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format">
+        </div>
+      </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/index.js"></script>
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+
+
   </body>
 </html>
