--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Fill out the form to create FFE Selenium Test Cronjobs</h1>
+      <h2>Fill out the form to create FFE Selenium Test Cronjobs</h2>
       <form id="cronForum">
         <fieldset>
         <div class="form-group">
@@ -43,7 +43,7 @@
           <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format">
         </div>
       </fieldset>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="button button-outline">Submit</button>
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
