Removed unneeded file and update html

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>FFE Cronjob HTML Page</title>
+    <title>FFE Cronjob Creator</title>
     <!-- <link rel="stylesheet" href="/META-INF/resources/patternfly.css"> -->
   </head>
   <body>
     <div class="container">
-      <h2>Fill out the form to create FFE Selenium Test Cronjobs</h2>
+      <h2>Fill out the form to create FFE Selenium Test Cronjob Template files</h2>
       <form id="cronForum">
         <fieldset>
         <div class="form-group">
