--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label for="url">Url:</label>
-            <input type="text" class="form-control" id="url">
+            <input type="text" class="form-control" id="url" placeholder="Use name from data.properties">
         </div>
         <div class="form-group">
             <label for="seleniumTestEmailList">Selenium Test EmailList:</label>
