Updated URL text box placeholder

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group">
           <label for="browser">Browser:</label>
-          <input type="text" class="form-control" id="browser">
+          <input type="text" class="form-control" id="browser" placeholder="Use box to connect to CMS Selenium Grid">
         </div>
         <div class="form-group">
             <label for="url">Url:</label>
