Added in some success & error messages

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -42,6 +42,10 @@
           <label for="cronJobSchedule">Cron Job Schedule:</label>
           <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format">
         </div>
+        <div style="color:#43916B" id="successMessage" hidden="true"> 
+          <p>Successfully created cronjob files. Check download folder.</p>
+        </div>
+        <div style="color:#CF4B2F" id="errorMessage"></div>
       </fieldset>
         <button type="submit" class="button button-outline">Submit</button>
       </form>
