--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -8,10 +8,8 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+      <a href="/">Create FFE CronJob</a>
     </div>
     
     <!-- Use any element to open the sidenav -->
