--- a/src/main/resources/META-INF/resources/gatling.html
+++ b/src/main/resources/META-INF/resources/gatling.html
@@ -7,7 +7,8 @@
   <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
+    <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
   </div>
@@ -15,7 +16,7 @@
     <!-- Use any element to open the sidenav -->
     <span onclick="openNav()"><h3>Menu</h3></span>
     <div class="container" id="main">
-      <h2>Fill out the form to create FFE Gatling Test Cronjob Template files</h2>
+      <h2>Fill out the form to create FFE Gatling Cronjob Template files</h2>
       <form id="cronForum">
         <fieldset>
         <div class="form-group">
@@ -23,7 +24,7 @@
           <input type="text" class="form-control" id="releaseBranch">
         </div>
         <div class="form-group">
-            <label for="url">Url:</label>
+            <label for="url">Enviroment:</label>
             <input type="text" class="form-control" id="url" placeholder="Use name from data.properties">
         </div>
         <div class="form-group">
