--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -7,7 +7,8 @@
   <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Cronjobs</a>
+    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
+    <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
   </div>
