--- a/src/main/resources/META-INF/resources/update.html
+++ b/src/main/resources/META-INF/resources/update.html
@@ -25,7 +25,7 @@
           </div>
           <div class="form-group">
             <label for="verifyCronJobSchedule">Current CronJob Schedule</label>
-            <input type="text" class="form-control" id="verifyCronJobSchedule" >
+            <input type="text" class="form-control" id="verifyCronJobSchedule" readonly>
           </div>
           <button type="submit" class="button button-outline" id="GetSchedule">Get Schedule</button>
       </div>
