Added in type to Gatling

--- a/src/main/resources/META-INF/resources/gatling.html
+++ b/src/main/resources/META-INF/resources/gatling.html
@@ -29,6 +29,10 @@
             <input type="text" class="form-control" id="url" placeholder="Use name from data.properties">
         </div>
         <div class="form-group">
+          <label for="gatlingTestEmailList">Type:</label>
+          <input type="text" class="form-control" id="type" placeholder="Use either Regression or SmokeTest">
+      </div>
+        <div class="form-group">
             <label for="gatlingTestEmailList">Gatling Test EmailList:</label>
             <input type="text" class="form-control" id="gatlingTestEmailList" placeholder="Seperate by a ,">
         </div>
