--- a/src/main/resources/META-INF/resources/update.html
+++ b/src/main/resources/META-INF/resources/update.html
@@ -31,7 +31,36 @@
       </div>
     </P>
 
-        <h3>Update CronJob Schedule</h3>
+    <h3>Update a Cronjob Schedule</h3>
+    <div id="updateInfoContainer">
+      <div class="form-group">
+        <label for="userName">CMS Username for MR:</label>
+        <input type="text" class="form-control" id="userName" placeholder="Type in your CMS Username for MR Request">
+      </div>
+      <div class="form-group">
+        <label for="description">Short description of the update: </label>
+        <input type="text" class="form-control" id="description" placeholder="Write a short description that will be include with the MR">
+      </div>
+    </div>
+    <label>Cronjobs:</label>
+    <div id="pairContainer"></div>
+    <button type="button" class="button button-outline" onclick="addPair()">Add Cronjob</button>
+    <button type="button" class="button button-outline" onclick="submitPairs()">Submit</button>
+    <div style="color:#43916B" id="successMessage" hidden="true"> 
+      <p>Successfully Updated Cronjob Schedule</p>
+    </div>
+    <div style="color:#CF4B2F" id="errorMessage"></div>
+
+      <!-- <h3>Update CronJob Schedule</h3>
+        <h1>Upload a file with the name of the cronjob and new cronjob scheudling: </h1>
+        <h1>Ex: </h1>
+        <form id="fileUploadForm">
+          <input type="file" id="fileInput" name="file">
+          <button type="submit" class="button button-outline">Upload</button>
+          <div style="color:#43916B" id="successMessage" hidden="true"> 
+            <p>Successfully Updated Cronjob Schedule</p>
+          </div>
+        </form>
         <form id="cronForum">
           <fieldset>
           <div class="form-group">
@@ -48,7 +77,7 @@
           <div style="color:#CF4B2F" id="errorMessage"></div>
           </fieldset>
             <button type="submit" class="button button-outline">Submit</button>
-        </form>
+        </form> --> 
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/update.js"></script>
