--- a/src/main/resources/META-INF/resources/update.html
+++ b/src/main/resources/META-INF/resources/update.html
@@ -9,7 +9,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
     <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
-    <a href="/update.html">Update FFE Cronjob Schedule</a>
+    <a href="/update.html">Update FFE Selenium Cronjobs Schedule</a>
     <a href="/gatling.html">Create Gatling Cronjob Files</a>
     <a href="/">Create FFE CronJob Files</a>
   </div>
@@ -42,34 +42,6 @@
       <p>Successfully Updated Cronjob Schedule</p>
     </div>
     <div style="color:#CF4B2F" id="errorMessage"></div>
-
-      <!-- <h3>Update CronJob Schedule</h3>
-        <h1>Upload a file with the name of the cronjob and new cronjob scheudling: </h1>
-        <h1>Ex: </h1>
-        <form id="fileUploadForm">
-          <input type="file" id="fileInput" name="file">
-          <button type="submit" class="button button-outline">Upload</button>
-          <div style="color:#43916B" id="successMessage" hidden="true"> 
-            <p>Successfully Updated Cronjob Schedule</p>
-          </div>
-        </form>
-        <form id="cronForum">
-          <fieldset>
-          <div class="form-group">
-            <label for="cronJobName">Cronjob Name:</label>
-            <input type="text" class="form-control" id="cronJobName">
-          </div>
-          <div>
-            <label for="cronJobSchedule">New Cron Job Schedule:</label>
-            <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format">
-          </div>
-          <div style="color:#43916B" id="successMessage" hidden="true"> 
-            <p>Successfully Updated Cronjob Schedule</p>
-          </div>
-          <div style="color:#CF4B2F" id="errorMessage"></div>
-          </fieldset>
-            <button type="submit" class="button button-outline">Submit</button>
-        </form> --> 
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/update.js"></script>
