--- a/src/main/resources/META-INF/resources/gatling.html
+++ b/src/main/resources/META-INF/resources/gatling.html
@@ -6,12 +6,13 @@
   </head>
   <body>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
-    <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
-    <a href="/openshift/tester-pipelines/dashboard">FFE Selenum Dashboard</a>
-    <a href="/gatling.html">Create Gatling Cronjob Files</a>
-    <a href="/">Create FFE CronJob Files</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="/openshift/tester-pipelines/cronjobs">List FFE Selenium Cronjobs</a>
+      <a href="/openshift/tester-pipelines/gatling">List Gatling Cronjobs</a>
+      <a href="/openshift/tester-pipelines/dashboard">FFE Selenum Dashboard</a>
+      <a href="/update.html">Update FFE Selenium Cronjobs Schedule</a>
+      <a href="/gatling.html">Create Gatling Cronjob Files</a>
+      <a href="/">Create FFE CronJob Files</a>
   </div>
     
     <!-- Use any element to open the sidenav -->
@@ -49,10 +50,10 @@
       </form>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/gatling.js"></script>
+  <script src="/js/gatling.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/css/index.css">
   </body>
 </html>
