Updated some default text

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="form-group">
           <label for="cronJobSchedule">Cron Job Schedule:</label>
-          <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format">
+          <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format with EST timezone">
         </div>
         <div style="color:#43916B" id="successMessage" hidden="true"> 
           <p>Successfully created cronjob files. Check download folder.</p>
