Added back in searching by env on cronjob listing

--- a/src/main/resources/META-INF/resources/loading.html
+++ b/src/main/resources/META-INF/resources/loading.html
@@ -14,7 +14,7 @@
   
   <body onload="loadNextPage()">
     <img src="/images/load.gif" alt="Loading gif">
-    <center><h2> Dahsboard is loading</h2></center>
+    <center><h2> Dahsboard is loading.</h2></center>
     <script>
         function loadNextPage() {
             window.location.href = "http://"+ window.location.host + "/openshift/tester-pipelines/dashboard";
