--- a/src/main/resources/META-INF/resources/mass-update.html
+++ b/src/main/resources/META-INF/resources/mass-update.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mass Cronjob Schedule Submission</title>
+</head>
+<body>
+
+    <h1>Submit Mass Cronjob Updated Schedule</h1>
+    <form id="regressionForm">
+        <textarea id="scheduleData" placeholder="Paste your schedule data here..." rows="30"></textarea>
+        <center><button type="submit">Submit</button></center>
+    </form>
+
+    <script src="/js/mass-update.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,6 +28,7 @@
         }
         form {
             max-width: 100%;
+            max-height: 900px;
             margin: 0 auto;
             background: white;
             padding: 20px;
@@ -23,70 +37,13 @@
         }
         textarea {
             width: 100%;
-            height: 300px;
+            height: auto; 
             margin-bottom: 10px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
         }
         button:hover {
             background-color: #45a049;
         }
     </style>
-</head>
-<body>
-
-    <h1>Submit Mass Cronjob Updated Schedule</h1>
-    <form id="regressionForm">
-        <textarea id="scheduleData" placeholder="Paste your schedule data here..."></textarea>
-        <button type="submit">Submit</button>
-    </form>
-
-    <script>
-        document.getElementById('regressionForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const scheduleData = document.getElementById('scheduleData').value;
-            const lines = scheduleData.trim().split('\n');
-            const jobs = [];
-
-            for (let i = 0; i < lines.length; i += 4) {
-                if (lines[i]) {
-                    const job = {
-                        jobName: lines[i],
-                        additionalInfo: lines[i + 1] || '',
-                        schedule: lines[i + 2],
-                        description: lines[i + 3]
-                    };
-                    jobs.push(job);
-                }
-            }
-
-            // Send the jobs data to the Quarkus API
-            fetch('/ffe-cronjob/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(jobs)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                alert('Schedule submitted successfully!');
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                alert('Error submitting schedule.');
-            });
-        });
-    </script>
 
 </body>
 </html>
