Autocreate pipeRunName on manuallykicking off a pipeline

--- a/src/main/resources/META-INF/resources/pipeline.html
+++ b/src/main/resources/META-INF/resources/pipeline.html
@@ -59,13 +59,10 @@
             <label for="mvnArgs">Maven Args</label>
             <input type="text" class="form-control" id="mvnArgs" value="--no-transfer-progress">
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="pipelineRunName">Pipeline Run Name</label>
             <input type="text" class="form-control" id="pipelineRunName" placeholder="Name of the run to find later">
-        </div>
-        <div style="color:#43916B" id="successMessage" hidden="true"> 
-          <p>Successfully created cronjob files. Check download folder.</p>
-        </div>
+        </div> -->
         <div style="color:#CF4B2F" id="errorMessage"></div>
         <div class="control-wrapper">
           <button type="submit" class="button button-outline">Submit</button>
