--- a/src/main/resources/META-INF/resources/landing-page.html
+++ b/src/main/resources/META-INF/resources/landing-page.html
@@ -4,63 +4,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 1</h5>
-                        <p class="card-text">Some quick example text to build on the card title.</p>
-                        <a href="/page1" class="btn btn-primary">Go to Page 1</a>
-                    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/images/OSIcon.jfif" alt="OpenShift" width="30" height="30">
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dashboards
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Selenium Cronjob Results Dashboard</a></li>
+                  <li><a class="dropdown-item" href="#">Selenium Reports Dashboard</a></li>
+                  <li><a class="dropdown-item" href="#">Current Cronjob Schedule Dashboard</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Edit Cronjob
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Create Selenuium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="#">Update Selenium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="#">Mass Update Selenium Cronjobs</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kick Off Selenium Pipeline</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <h2>FFM Selenium Cronjob Creator Utility</h2>
+    <div class="row row-cols-4 row-cols-md 2 g-4">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
+                    <p class="card-text">A Dashboard with the results from last night Cronjob runs include number of test run, pass/failed, and any errors/exceptions. </p>
+                    <a href="/page1" class="btn btn-primary">Go to Page 1</a>
                 </div>
             </div>
-            <div class="col-md-4">
+            </div>
+            <div class="col">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card 2">
                     <div class="card-body">
-                        <h5 class="card-title">Card 2</h5>
-                        <p class="card-text">Some quick example text to build on the card title.</p>
+                        <h5 class="card-title">Selenium Reports Dashboard</h5>
+                        <p class="card-text">A Dashboard to links to the report, logs, and zip file of saved Selenium Runs</p>
                         <a href="/page2" class="btn btn-primary">Go to Page 2</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card 3">
                     <div class="card-body">
-                        <h5 class="card-title">Card 3</h5>
-                        <p class="card-text">Some quick example text to build on the card title.</p>
+                        <h5 class="card-title">Current Cronjob Schedule Dashboard</h5>
+                        <p class="card-text">List al the current Selenium Cronjobs that are scheduled on OpenShift. </p>
                         <a href="/page3" class="btn btn-primary">Go to Page 3</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card 4">
                     <div class="card-body">
-                        <h5 class="card-title">Card 4</h5>
-                        <p class="card-text">Some quick example text to build on the card title.</p>
+                        <h5 class="card-title">Create Selenuium Cronjob</h5>
+                        <p class="card-text">Create all the required files for a new Selenium Pipeline Run to be kicked off by a Cronjob on OpenShift. </p>
                         <a href="/page4" class="btn btn-primary">Go to Page 4</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card 5">
                     <div class="card-body">
-                        <h5 class="card-title">Card 5</h5>
-                        <p class="card-text">Some quick example text to build on the card title.</p>
+                        <h5 class="card-title">Update Selenium Cronjob</h5>
+                        <p class="card-text">Update the timing of a Selenium Pipeline Run controlled by OpenShift Cronjob.</p>
+                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Mass Update Selenium Cronjobs</h5>
+                        <p class="card-text">Update the scheduling for multiple Selenium OpenShift Cronjobs.</p>
+                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kick Off Selenium Pipeline</h5>
+                        <p class="card-text">Launch a new Selenium Pipeline Run on Openshift. </p>
                         <a href="/page5" class="btn btn-primary">Go to Page 5</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
