Fixed Cleanup Bean, js, and added new logo

--- a/src/main/resources/META-INF/resources/landing-page.html
+++ b/src/main/resources/META-INF/resources/landing-page.html
@@ -6,10 +6,10 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class= "navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/images/OSIcon.jfif" alt="OpenShift" width="30" height="30">
+                <img src="/images/selenium-logo.png" alt="Selenuium" width="30" height="30">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,13 +46,16 @@
           </div>
         </div>
       </nav>
-    <h2>FFM Selenium Cronjob Creator Utility</h2>
+    <BR>
+    <BR>
+    <center><h2>FFM Selenium Cronjob Creator Utility</h2></center>
+    <P></P>
     <div class="row row-cols-4 row-cols-md 2 g-4">
         <div class="col">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
-                    <p class="card-text">A Dashboard with the results from last night Cronjob runs include number of test run, pass/failed, and any errors/exceptions. </p>
+                    <p class="card-text">Dashboard with the results from last night Cronjob runs. </p>
                     <a href="/page1" class="btn btn-primary">Go to Page 1</a>
                 </div>
             </div>
@@ -61,7 +64,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Selenium Reports Dashboard</h5>
-                        <p class="card-text">A Dashboard to links to the report, logs, and zip file of saved Selenium Runs</p>
+                        <p class="card-text">Dashboard with links to the report, logs, and zip file of saved Selenium Runs</p>
                         <a href="/page2" class="btn btn-primary">Go to Page 2</a>
                     </div>
                 </div>
@@ -79,7 +82,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Create Selenuium Cronjob</h5>
-                        <p class="card-text">Create all the required files for a new Selenium Pipeline Run to be kicked off by a Cronjob on OpenShift. </p>
+                        <p class="card-text">Create all the required files for a new Cronjob controlled Selenium Pipeline Run. </p>
                         <a href="/page4" class="btn btn-primary">Go to Page 4</a>
                     </div>
                 </div>
