--- a/src/main/resources/META-INF/resources/landing-page.html
+++ b/src/main/resources/META-INF/resources/landing-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <nav class= "navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -17,100 +18,97 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dashboards
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Selenium Cronjob Results Dashboard</a></li>
-                  <li><a class="dropdown-item" href="#">Selenium Reports Dashboard</a></li>
-                  <li><a class="dropdown-item" href="#">Current Cronjob Schedule Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/pipeline/tester-pipelines/listSeleniumReports/all">Selenium Saved Results Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Edit Cronjob
+                  Create/Edit Cronjobs
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Create Selenuium Cronjob</a></li>
-                  <li><a class="dropdown-item" href="#">Update Selenium Cronjob</a></li>
-                  <li><a class="dropdown-item" href="#">Mass Update Selenium Cronjobs</a></li>
+                  <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Kick Off Selenium Pipeline</a>
+                <a class="nav-link" href="/forums/start-job">Kick Off a Selenium Pipeline</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    <BR>
-    <BR>
-    <center><h2>FFM Selenium Cronjob Creator Utility</h2></center>
-    <P></P>
-    <div class="row row-cols-4 row-cols-md 2 g-4">
-        <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
-                    <p class="card-text">Dashboard with the results from last night Cronjob runs. </p>
-                    <a href="/page1" class="btn btn-primary">Go to Page 1</a>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 col-md-3 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
+                        <p class="card-text">View the results of the latest Selneium Jobs kicked off by a Cronjob</p>
+                        <a href="/openshift/tester-pipelines/dashboard" class="btn btn-primary">Go to Link</a>
+                    </div>
                 </div>
             </div>
-            </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Selenium Reports Dashboard</h5>
-                        <p class="card-text">Dashboard with links to the report, logs, and zip file of saved Selenium Runs</p>
-                        <a href="/page2" class="btn btn-primary">Go to Page 2</a>
+                        <p class="card-text">View all Reports, Logs, and Zip file of saved Selenium Runs. </p>
+                        <a href="/pipeline/tester-pipelines/listSeleniumReports/all" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Current Cronjob Schedule Dashboard</h5>
-                        <p class="card-text">List al the current Selenium Cronjobs that are scheduled on OpenShift. </p>
-                        <a href="/page3" class="btn btn-primary">Go to Page 3</a>
+                        <p class="card-text">View all current Selenium CronJob schedules active on OpenShift</p>
+                        <a href="/openshift/tester-pipelines/cronjobs" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Create Selenuium Cronjob</h5>
-                        <p class="card-text">Create all the required files for a new Cronjob controlled Selenium Pipeline Run. </p>
-                        <a href="/page4" class="btn btn-primary">Go to Page 4</a>
+                        <p class="card-text">Create all the required files to add a Cronjob to kick off a Selenium Test</p>
+                        <a href="/forums/create-job" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Update Selenium Cronjob</h5>
-                        <p class="card-text">Update the timing of a Selenium Pipeline Run controlled by OpenShift Cronjob.</p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <p class="card-text">Update the Cronjob Scheduling of a Selenium Cronjob</p>
+                        <a href="/forums/update-job" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mass Update Selenium Cronjobs</h5>
-                        <p class="card-text">Update the scheduling for multiple Selenium OpenShift Cronjobs.</p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <p class="card-text">Quickly update the scheduling of multiple Selenium Cronjobs</p>
+                        <a href="/forums/mass-update" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-md-3 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
-                        <p class="card-text">Launch a new Selenium Pipeline Run on Openshift. </p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <p class="card-text">Launch a new Selenium Job to run on Openshift and CMS Selenium Grid. Results will be saved. </p>
+                        <a href="/forums/start-pipeline" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
