--- a/src/main/resources/META-INF/resources/landing-page.html
+++ b/src/main/resources/META-INF/resources/landing-page.html
@@ -47,9 +47,9 @@
           </div>
         </div>
       </nav>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-12 col-md-3 mb-4">
+      <h2>FFM Selenium Cronjob Creator Utility</h2>
+      <div class="row row-cols-4 row-cols-md 2 g-4">
+          <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Selenium Reports Dashboard</h5>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Current Cronjob Schedule Dashboard</h5>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Create Selenuium Cronjob</h5>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Update Selenium Cronjob</h5>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mass Update Selenium Cronjobs</h5>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mb-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-    </div>
+      </div>
     <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
