Fixed how landing page looks

--- a/src/main/resources/META-INF/resources/landing-page.html
+++ b/src/main/resources/META-INF/resources/landing-page.html
@@ -47,7 +47,9 @@
           </div>
         </div>
       </nav>
-      <h2>FFM Selenium Cronjob Creator Utility</h2>
+      <BR>
+      <center><h2>FFM Selenium Cronjob Creator Utility</h2></center>
+      <BR>
       <div class="row row-cols-4 row-cols-md 2 g-4">
           <div class="col">
                 <div class="card">
