Speed up the loading bar

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -25,9 +25,9 @@
                   Dashboards
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item progress-bar" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
-                  <li><a class="dropdown-item progress-bar" href="/pipeline/tester-pipelines/listSeleniumReports/all">Selenium Saved Results Dashboard</a></li>
-                  <li><a class="dropdown-item progress-bar" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar-link" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar-link" href="/pipeline/tester-pipelines/listSeleniumReports/all">Selenium Saved Results Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar-link" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -166,7 +166,7 @@
 <script>
 
     // Get all elements with the class 'progress-name'
-    const progressElements  = document.querySelectorAll('.progress-bar');
+    const progressElements  = document.querySelectorAll('.progress-bar-link');
 
     progressElements.forEach(element => {
         element.addEventListener('click', function() {
