--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -106,6 +106,15 @@
                 </div>
             </div>
             <div class="col">
+              <div class="card">
+                  <div class="card-body">
+                      <h5 class="card-title">Edit/Add Selenium Cronjob Display Tags</h5>
+                      <p class="card-text">Edit, Add, and Remove Selenium Display Tags.  </p>
+                      <a href="/forums/selenium-cj-tags" class="btn btn-primary">Go to Link</a>
+                  </div>
+              </div>
+          </div>
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
