Made the Mass Update use a excel file

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -38,7 +38,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
               <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
-              <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
+              <li><a class="dropdown-item" href="/forums/mass-excel-update">Mass Update Selenium Cronjobs</a></li>
               <li><a class="dropdown-item" href="/forums/mass-create">Mass Create Selenium Cronjobs</a></li>
             </ul>
           </li>
@@ -105,8 +105,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mass Update Selenium Cronjobs</h5>
-                        <p class="card-text">Quickly update the scheduling of multiple Selenium Cronjobs</p>
-                        <a href="/forums/mass-update" class="btn btn-primary">Go to Link</a>
+                        <p class="card-text">Quickly update the scheduling of multiple Selenium Cronjobs files using a Excel file</p>
+                        <a href="/forums/mass-excel-update" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Mass Create Selenium Cronjob Schedule Files</h5>
-                    <p class="card-text">Allows the user to upload a Excel sheet (a sample is provided) to mass create Seleniuim Cronjob Schedule Files for OpenShift </p>
+                    <p class="card-text">Use excel to mass create Seleniuim Cronjob Schedule Files for OpenShift </p>
                     <a href="/forums/mass-create" class="btn btn-primary">Go to Link</a>
                 </div>
             </div>
