Fixed some wording

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -123,7 +123,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
-                        <p class="card-text">Launch a new Selenium Job to run on Openshift and CMS Selenium Grid. Results will be saved. </p>
+                        <p class="card-text">Launch a new Selenium Pipieline to run on Openshift and Selenium Grid.</p>
                         <a href="/forums/start-pipeline" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
